# GarbageRobo

./: .gitignore  README.md  main.py  platformio.ini  pyproject.toml  requirements.txt  setup.py  template.py
backup_files/: README.md  arm_final.cpp  arm_final3.cpp  arm_final4.cpp  arm_finalv2.cpp  color_sense.cpp  colorv2.cpp  combo.cpp  esp32_dualcore.cpp  final.cpp  oled_gy.cpp  original.cpp  ultrasonic.cpp
docs/: index.html
include/: images.h
research/: model_int8.tflite  trials.ipynb
src/: bt_module.cpp.bkp  bt_motor_mix.cpp.bkp  esp32_servo.cpp.bkp  main copy.cpp.bkp  main copy3.cpp.bkp  main.cpp  motorv2_bt.cpp.bkp  oled_working.cpp.bkp  teach_servo.cpp.bkp
src/waste_classifier/: __init__.py
src/waste_classifier/utils/: common.py
