[project]
name = "waste-classifier"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "colorama>=0.4.6",
    "tqdm>=4.67.1",
    "torch",
    "torchvision",
    "pandas",
    "dvc",
    "mlflow",
    "notebook",
    "numpy",
    "matplotlib",
    "seaborn",
    "python-box",
    "pyyaml",
    "tqdm",
    "ensure",
    "joblib",
    "types-PyYAML",
    "scipy",
    "fastapi",
    "uvicorn",
    "gdown",
    "aiohttp>=3.12.13",
    "asyncio>=3.4.3",
    "python-dotenv>=1.1.1",
]

[project.optional-dependencies]
dev = ["waste-classifier"]
